--- a/platformio.ini
+++ b/platformio.ini
@@ -167,6 +167,7 @@ lib_deps          = Servo
   U8glib-HAL=https://github.com/MarlinFirmware/U8glib-HAL/archive/dev.zip
   TMCStepper@<1.0.0
   Adafruit NeoPixel=https://github.com/p3p/Adafruit_NeoPixel/archive/master.zip
+upload_port=/run/media/marc/disk
 
 [env:LPC1769]
 platform          = https://github.com/p3p/pio-nxplpc-arduino-lpc176x/archive/master.zip
